<resources>
    <string name="app_name">Lily</string>

    <string name="grant">Grant</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="author">Author</string>
    <string name="others">Others</string>
    <string name="spread_love">Spread love</string>
    <string name="rate_us">Rate us 5 star</string>
    <string name="report_bug">Report bug</string>
    <string name="help_us_to_translate">Help us to translate</string>
    <string name="send_feedback">Send feedback</string>
    <string name="about_app">About app</string>
    <string name="other_apps">Other apps</string>
    <string name="choose_app">Choose app</string>
    <string name="email">tuple.me@gmail.com</string>
    <string name="success">Success</string>
    <string name="share">Share</string>
    <string name="changelog_header_version">"Version "</string>
    <string name="changelog_row_bulletpoint">\u2022</string>
    <string name="changelog_row_prefix_bug">[b]Bug:[/b]</string>
    <string name="changelog_row_prefix_improvement">[b]New:[/b]</string>

    <string name="permissify_go_to_settings">Go to settings</string>
    <string name="permissify_permission_rationale_title">We need this permission</string>
    <string name="permissify_no_text_fallback">Permissify: No fallback text was provided for this permission</string>
    <string name="change_log">Change log</string>
    <string name="failed_to_open_file">Failed to open file</string>
    <string name="open">Open</string>
    <string name="icon">Icon</string>
    <string name="no_app_found">No app found</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="confirm">Confirm</string>
    <string name="failed_to_open_app">Failed to open app</string>

</resources>
