<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_width="match_parent">
    <include layout="@layout/toolbar"/>
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/card_common"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                android:layout_marginTop="@dimen/activity_horizontal_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:padding="8dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/about_title_txt"
                        android:text="@string/author"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:paddingBottom="8dp"
                        android:background="@color/holo_dark_background"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:gravity="center_vertical"
                            android:textSize="16dp"
                            android:text="Gokul prabhu"/>
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:padding="2dp"
                            android:onClick="openQuora"
                            android:src="@drawable/ic_quora"
                            android:id="@+id/imageView"
                            android:layout_marginRight="20dp"
                            android:layout_alignParentTop="true"
                            android:layout_toLeftOf="@+id/imageView2"
                            android:layout_toStartOf="@+id/imageView2" />
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:padding="1dp"
                            android:onClick="openFaceBook"
                            android:src="@drawable/ic_facebook"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:id="@+id/imageView2" />
                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/card_common"
                app:cardBackgroundColor="@color/colorPrimaryDark">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:padding="8dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/about_title_txt"
                        android:text="@string/spread_love"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:paddingBottom="8dp"
                        android:background="@color/holo_dark_background"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:onClick="rateUs"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            style="@style/support_dev_text"
                            android:text="@string/rate_us"
                            android:layout_toRightOf="@+id/rate_us"
                            android:layout_toEndOf="@+id/rate_us" />
                        <ImageView
                            style="@style/support_dev_icon"
                            android:src="@drawable/ic_star"
                            android:id="@+id/rate_us" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:onClick="reportBug"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            style="@style/support_dev_text"
                            android:text="@string/report_bug"
                            android:layout_toRightOf="@+id/report_bug"
                            android:layout_toEndOf="@+id/report_bug" />
                        <ImageView
                            style="@style/support_dev_icon"
                            android:src="@drawable/ic_bug_report"
                            android:id="@+id/report_bug" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:onClick="sendFeedBack"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/send_feedback"
                            style="@style/support_dev_text"
                            android:layout_toRightOf="@+id/feed_back"
                            android:layout_toEndOf="@+id/feed_back" />
                        <ImageView
                            style="@style/support_dev_icon"
                            android:src="@drawable/ic_feedback"
                            android:id="@+id/feed_back" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:onClick="translate"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/help_us_to_translate"
                            style="@style/support_dev_text"
                            android:layout_toRightOf="@+id/translate"
                            android:layout_toEndOf="@+id/translate" />
                        <ImageView
                            style="@style/support_dev_icon"
                            android:src="@drawable/ic_translate"
                            android:id="@+id/translate" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:onClick="share"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/share"
                            style="@style/support_dev_text"
                            android:layout_toRightOf="@+id/share"
                            android:layout_toEndOf="@+id/share" />
                        <ImageView
                            style="@style/support_dev_icon"
                            android:src="@drawable/ic_share"
                            android:id="@+id/share" />
                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/card_common"
                app:cardBackgroundColor="@color/colorPrimaryDark">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:padding="8dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/about_title_txt"
                        android:text="@string/about_app"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:paddingBottom="8dp"
                        android:background="@color/holo_dark_background"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:onClick="changeLog"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/change_log"
                            style="@style/support_dev_text"
                            android:layout_toRightOf="@+id/change_log"
                            android:layout_toEndOf="@+id/change_log" />
                        <ImageView
                            style="@style/support_dev_icon"
                            android:src="@drawable/ic_check_circle"
                            android:id="@+id/change_log" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:onClick="otherApps"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/other_apps"
                            style="@style/support_dev_text"
                            android:layout_toRightOf="@+id/other_apps"
                            android:layout_toEndOf="@+id/other_apps" />
                        <ImageView
                            style="@style/support_dev_icon"
                            android:src="@drawable/ic_google_play"
                            android:id="@+id/other_apps" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/version_text"
                            style="@style/support_dev_text"
                            android:layout_toRightOf="@+id/version"
                            android:layout_toEndOf="@+id/version" />
                        <ImageView
                            style="@style/support_dev_icon"
                            android:src="@drawable/ic_alert_circle"
                            android:id="@+id/version" />
                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
